fix: create accnt link not align

--- a/fieldkit/assets/styles/woocommerce/_woocommerce-login-register.scss
+++ b/fieldkit/assets/styles/woocommerce/_woocommerce-login-register.scss
@@ -214,6 +214,7 @@
       }
 
       .woocommerce-form-login__submit {
+        float: initial;
         width: 100%;
       }
 
